[package]
name = "dad-youtube"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
dirs = "5.0.1"
eframe = "0.25.0"
egui = "0.25.0"
rustube = { version = "0.6.0", features=['callback'] }
tokio = { version = "1.35.1",  features=['full'] }
